@@ -314,6 +314,10 @@ li span.deleted {
 	font-style: italic;
 }
 
+div.editsection {
+	float: right;
+	margin-left: 5px;
+}
 
 /* Classes for EXIF data display */
 table.mw_metadata {
@@ -429,4 +433,3 @@ table.multipageimage td {
 .imagelist .TablePager_col_links { background-color: #eeeeff }
 .imagelist .TablePager_col_img_description { white-space: normal }
 .imagelist th.TablePager_sort { background-color: #ccccff }
-
